--- a/website/templates/components/map_navbar.pug
+++ b/website/templates/components/map_navbar.pug
@@ -7,4 +7,4 @@ nav.navbar.navbar-expand-sm.navbar-light.bg-light.d-flex.justify-content-between
 	include geocoder.pug
 
 	form.form-inline
-		a.connect-osm.btn.btn-outline-secondary.text-truncate.ml-2(role="button")
+		+user_button
