--- a/website/templates/components/stats.pug
+++ b/website/templates/components/stats.pug
@@ -34,8 +34,8 @@ div#statistics.blog-post.container
 			h3 Podium
 			p#stats-leaderboard-noauth.text-center
 				| Connectez-vous pour voir le podium
-				br
-				button.connect-osm.btn.btn-primary.mt-2
+				br.mb-2
+				+user_connect
 			div#stats-leaderboard-container.d-none.overflow-auto(style="height: 300px")
 				table.table.table-sm
 					thead
