--- a/website/templates/layout.pug
+++ b/website/templates/layout.pug
@@ -12,7 +12,7 @@ html(lang="fr")
 			div.container.d-flex.p-0.px-sm-3.align-items-center.justify-content-between
 				div
 					block navbar
-				a.connect-osm.btn.btn-sm.btn-outline-secondary.text-truncate.ml-2(role="button")
+				+user_button
 
 		block content
 
