--- a/website/templates/components/map_sidebar.pug
+++ b/website/templates/components/map_sidebar.pug
@@ -3,8 +3,8 @@ div#pdm-map-sidebar.pdm-hidden
 		button.toggle-map-sidebar.btn.btn-outline-secondary.btn-sm.mt-2(type="button" title="Afficher/masquer la barre latérale")
 			i.fa.fa-bars
 		if editors.pdm && editors.pdm.add
-			button.editor-add-btn.btn.btn-outline-primary.btn-sm(type="button" title=editors.pdm.add.title)
-				i.fa.fa-map-marked-alt
+			button.editor-add-btn.btn.btn-outline-primary.btn-sm.container-svg-fa(type="button" title=editors.pdm.add.title style="height: 29px")
+				include ../../images/marker_plus.svg
 
 	div.overflow-auto.h-100
 		//- Default panel showing legend
@@ -15,6 +15,13 @@ div#pdm-map-sidebar.pdm-hidden
 					div
 						span(style=`color: ${lg.color}`) ●
 						| #{lg.label}
+
+				if editors.pdm && editors.pdm.add
+					h5.mt-3 Éditer
+					button.editor-add-btn.btn.btn-primary.btn-block(type="button" title=editors.pdm.add.title)
+						span.d-inline-block.container-svg-fa.mr-3(style="height: 24px")
+							include ../../images/marker_plus.svg
+						| #{editors.pdm.add.title}
 
 		//- Display details of a single feature
 		div.pdm-sidebar-feature.m-3.d-none
@@ -38,7 +45,9 @@ script.
 	// Add feature button
 	const editors = !{JSON.stringify(editors)};
 	if(editors.pdm && editors.pdm.add) {
-		sidebarDom.querySelector(".editor-add-btn").addEventListener("click", onStartNewFeature);
+		for(let btnAddDom of sidebarDom.querySelectorAll(".editor-add-btn")) {
+			btnAddDom.addEventListener("click", onStartNewFeature);
+		}
 	}
 
 	// Change visible panel
