Fix onbeforeunload after map click

--- a/website/templates/components/map.pug
+++ b/website/templates/components/map.pug
@@ -456,7 +456,7 @@ script.
 
 		if(!features || features.length === 0) {
 			if(!lastCallbackFeatureLocation) {
-				window.dispatchEvent(new CustomEvent("pdm_sidebar_use", { detail: { panel: "default" } }));
+				cancelAddNewFeature();
 				showMarker();
 			}
 		}
@@ -464,6 +464,7 @@ script.
 			if(lastCallbackFeatureLocation) {
 				cancelAskFeatureLocation();
 			}
+			cancelAddNewFeature(false, true);
 			const coordinates = features[0].geometry.coordinates.slice();
 			while (Math.abs(e.lngLat.lng - coordinates[0]) > 180) {
 				coordinates[0] += e.lngLat.lng > coordinates[0] ? 360 : -360;
