Handle next project with proper display

--- a/website/templates/components/user_button.pug
+++ b/website/templates/components/user_button.pug
@@ -92,7 +92,7 @@ mixin user_button
 			button.btn.btn-sm.btn-outline-secondary.dropdown-toggle.text-truncate.ml-2(role="button" title="Menu" data-toggle="dropdown")
 				i.fa.fa-user
 				span.d-none.d-sm-inline.ml-1 Utilisateur
-			div.dropdown-menu(style="left: -50px")
+			div.dropdown-menu
 				a.dropdown-item.pdm-user-page-btn(href="")
 					i.fa.fa-medal.mr-1
 					| Mes badges
